# GEOLOG_GASRATIO_Pixler

./: .gitignore  Dataset_merged.las  Dataset_merged_4.las  FULL_PROJECT_0.7.58_MANIFEST.md  FULL_PROJECT_0.7.59_MANIFEST.md  README.md  VALIDATION.txt  VALIDATION_0.7.24.txt  VALIDATION_0.7.26.txt  VALIDATION_0.7.27.txt  VALIDATION_ANNOTATIONS_0.7.19.json  VALIDATION_INTERACTION_0.7.23.json  VALIDATION_PARADOX_0.7.16.json  VALIDATION_PARADOX_0.7.18.json  pyproject.toml
benchmarks/: benchmark_curve_sampling.py  benchmark_tablet_rendering.py
docs/: ACQUISITION_REPLAY.md  ARCHITECTURE.md  BRANDING.md  BUILD_MANIFEST_0.7.60.md  BUILD_MANIFEST_0.7.61.md  BUILD_MANIFEST_0.7.62.md  CALCIMETRY_LBA.md  CHANGELOG.md  CONSTRUCTOR_ARCHITECTURE.md  CONSTRUCTOR_ASSET_IMPORT_REPORT.md  COVERAGE_MODEL.md  CSV_IMPORT.md  DEXP_FORMULAS.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_POLICY.md  DOCX_HTML_EXPORT.md  EXCEL_IMPORT.md  FORM_ENGINE.md  GEODATA_REFERENCE_REVIEW.md  GEOSKETCH_REFERENCE_REVIEW.md  HOTFIX_REPORT_0.7.17.md  HOTFIX_REPORT_0.7.18.md  HOTFIX_REPORT_0.7.19.md  HOTFIX_REPORT_0.7.20.md  HOTFIX_REPORT_0.7.21.md  HOTFIX_REPORT_0.7.23.md  HOTFIX_REPORT_0.7.24.md  HOTFIX_REPORT_0.7.25.md  HOTFIX_REPORT_0.7.26.md  HOTFIX_REPORT_0.7.27.md  I18N.md  IMPLEMENTATION_REPORT_0.7.16.md  IMPORT_REVIEW.md  INCREMENT_0.2.md  INCREMENT_0.3.md  INCREMENT_0.4.md  INCREMENT_0.5.md  INCREMENT_0.6.md  INCREMENT_0.7.md  INDUSTRY_FORMATS_PLAN.md  (+63 more)
scripts/: run_tests.py
tests/: conftest.py  test_acquisition.py  test_acquisition_codec.py  test_adaptive_form_ui_contract.py  test_annotation_delete_source.py  test_annotation_direct_workflow_source.py  test_annotation_event_routing.py  test_annotation_flicker_policy.py  test_annotation_interaction_geometry.py  test_annotation_layout.py  test_annotation_overlay_source.py  test_annotation_source_integrity.py  test_annotation_tool_router.py  test_annotation_windows_render_mask.py  test_application_logging_0751.py  test_atomic_json.py  test_branding.py  test_canvas_history.py  test_channel_groups.py  test_constructor_asset_registry.py  test_constructor_integration_static.py  test_core.py  test_coverage.py  test_coverage_boundaries_source.py  test_csv_adapter.py  test_csv_import_dialog.py  (+250 more)
(+568 files in other folders)
