[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geolog-gasratio-pixler"
version = "0.7.19"
description = "Desktop workbench for LAS, gas ratio, Pixler profiles and geological masterlogs"
authors = [
  { name = "Rinat Sarmuldin", email = "ura07srr@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "PySide6>=6.6",
  "pyqtgraph>=0.13.7",
  "lasio>=0.31",
  "openpyxl>=3.1"
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6", "mypy>=1.10", "build>=1.2"]
analysis = ["scipy>=1.12", "pandas>=2.2", "pyarrow>=15"]

[project.scripts]
geolog-gasratio-pixler = "geoworkbench.app.main:main"
geoworkbench = "geoworkbench.app.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
geoworkbench = [
  "resources/*.json", "resources/*.png", "resources/i18n/*.json",
  "resources/constructor_assets/*/*.json",
  "resources/constructor_assets/*/originals/*.bmp",
  "resources/constructor_assets/*/thumbnails/*.png",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[[tool.mypy.overrides]]
module = ["lasio", "pyqtgraph"]
ignore_missing_imports = true
